cli/tests/snapshots/main__formatting@indented-code-1.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/indented-code/indented-code-1.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
```
hello world
```

-----------------------------------end input------------------------------------
|                                                                              | printWidth

