cli/tests/snapshots/main__formatting@indented-code-2.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/indented-code/indented-code-2.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
```
a simple
  indented code block
```

-----------------------------------end input------------------------------------
|                                                                              | printWidth

