cli/tests/snapshots/main__formatting@indented-code-3.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/indented-code/indented-code-3.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
```
<a/>
*hi*

- one
```

-----------------------------------end input------------------------------------
|                                                                              | printWidth

