cli/tests/snapshots/main__formatting@indented-code-4.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/indented-code/indented-code-4.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
```
chunk1

chunk2



chunk3
```

-----------------------------------end input------------------------------------
|                                                                              | printWidth

