cli/tests/snapshots/main__formatting@indented-code-5.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/indented-code/indented-code-5.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
```
chunk1

  chunk2
```

-----------------------------------end input------------------------------------
|                                                                              | printWidth

