cli/tests/snapshots/main__formatting@indented-code-6.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/indented-code/indented-code-6.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
```
foo
```

bar

-----------------------------------end input------------------------------------
|                                                                              | printWidth

