cli/tests/snapshots/main__formatting@indented-code-7.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/indented-code/indented-code-7.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
# Heading

```
foo
```

## Heading

```
foo
```

---

-----------------------------------end input------------------------------------
|                                                                              | printWidth

