cli/tests/snapshots/main__formatting@indented-code-8.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/indented-code/indented-code-8.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
````
```
aaa
```
````

-----------------------------------end input------------------------------------
|                                                                              | printWidth

