cli/tests/snapshots/main__formatting@json-boolean.json.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/json/json-boolean.json
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
true

-----------------------------------end input------------------------------------
|                                                                              | printWidth

