cli/tests/snapshots/main__formatting@json-key-value.json.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/json/json-key-value.json
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
{
    "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

-----------------------------------end input------------------------------------
|                                                                              | printWidth

